add profile, skills, edu-exp, projects, courses, aboutme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,245 +1,6 @@
-  <!-- Profile -->
-  <div class="card mat-card mx-auto" id="card-about">
-      <img class="card-img-top" src="https://i.pinimg.com/originals/d5/e7/87/d5e78748a833f904c59e030401ae2325.jpg" alt="Card image cap">
-      <div id="info">
-          <div class="info-about">
-              <div class="img-about mb-3">
-                  <img src="https://i.pinimg.com/550x/d8/da/b3/d8dab349862cf5397b90379cc0bcb8b5.jpg" alt="ProfilePicture" id="img-about">
-                  <i class="fa-solid fa-pen-to-square"></i>
-              </div>
-              
-              <div class="mb-3" id="info-data">
-                  <div>
-                      <h2>Cristian Ramos</h2>
-                      <div id="info-company">Estudiante UNPA</div>
-                      <div id="info-contact">
-                          <span>Río Gallegos, Argentina</span>
-                      </div>
-                  </div>
-                  <ul id="info-details">
-                      <li>        
-                          <a href="#" style="text-decoration: none;">
-                              <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Logo_oficial_UNPA.jpg" alt="LogoUnpa" class="logo-unpa">
-                              <h5>Universidad Nacional de la Patagonia Austral</h5>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-              <div id="info-action">
-                  <a href="#" class="btn btn-primary">Intereses: </a>
-                  <a href="#" class="btn btn-light" id="dropdownMenuAction" data-bs-toggle="dropdown" aria-expanded="false">Añadir sección: </a>
-                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuAction">
-                      <li><a class="dropdown-item" href="#">Añadir <strong>Cursos</strong></a></li>
-                      <li><a class="dropdown-item" href="#">Añadir <strong>Pasantías</strong></a></li>
-                  </ul>
-                  <a href="#" class="btn btn-light" id="dropdownMenuAction" data-bs-toggle="dropdown" aria-expanded="false">Más: </a>
-                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuAction">
-                      <li><a class="dropdown-item" href="#">Compartir perfil</a></li>
-                      <li><a class="dropdown-item" href="#">Descargar en PDF</a></li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- END Profile-->
-
-  <!-- About -->
-  <div class="card mat-card mx-auto" id="aboutme">
-      <div id="info">
-          <div class="title mb-1">
-              <h3>Acerca de...</h3>
-              <i class="fa-solid fa-pen-to-square"></i>
-          </div>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cum quasi, minus nemo vero eum aspernatur eos sapiente eius maxime dolores deleniti in, itaque quos velit corporis recusandae iusto expedita? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, iure officiis? Nesciunt possimus earum eligendi laboriosam quos adipisci rem, assumenda fugit alias similique, excepturi aspernatur, vel praesentium? Voluptas, libero voluptatum.</p>
-      </div>
-  </div>
-  <!-- END about-->
-
-  <!-- Educación y Experiencia -->
-  <div class="card mat-card mx-auto" id="education-experience">
-      <div id="info">
-          <div class="row align-item-center">
-              <!-- Columna -->
-              <div class="col-lg-6">
-                  <div class="title mb-1">
-                      <h3>Educación</h3>
-                      <i class="fa-solid fa-plus"></i>
-                  </div>
-                  <!-- Elemento EDU -->
-                  <div class="border-left border-primary pt-2 pl-4 ml2">
-                      <div class="position-relative ex-me mb-4">
-                          <h5 class="text-primary">Bachiller en Economía y Administración<i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h5>
-                          <p class="text-muted mb-1"><strong>Colegio Provincial de Educación Secundaria N° 23</strong> <small>MARZO 2012 - DICIEMBRE 2017</small></p>
-                          <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum itaque voluptatem sit autem ullam voluptatum earum, sint ipsam ratione incidunt accusamus optio laudantium adipisci, exercitationem nostrum fugit et aliquid animi.</p>
-                      </div>
-                  </div>
-                  <!-- END Elemento EDU -->
-                  <!-- Elemento EDU -->
-                  <div class="border-left border-primary pt-2 pl-4 ml2">
-                      <div class="position-relative ex-me mb-4">
-                          <h5 class="text-primary">Licenciatura en Sistemas<i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h5>
-                          <p class="text-muted mb-1"><strong>Universidad de la Patagonia Austral</strong> <small>2018 - PRESENTE</small></p>
-                          <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum itaque voluptatem sit autem ullam voluptatum earum, sint ipsam ratione incidunt accusamus optio laudantium adipisci, exercitationem nostrum fugit et aliquid animi.</p>
-                      </div>
-                  </div>
-                  <!-- END Elemento EDU -->
-              </div>
-              <!-- Columna -->
-              <div class="col-lg-6">
-                  <div class="title mb-1">
-                      <h3>Experiencia</h3>
-                      <i class="fa-solid fa-plus"></i>
-                  </div>
-              
-                  <div class="border-left border-primary pt-2 pl-4 ml2">
-                      <div class="position-relative ex-me mb-4">
-                          <h5 class="text-primary">Administrador de Finanzas<i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h5>
-                          <p class=" text-muted mb-1"><strong>Pastas Anita</strong> <small>AGOSTO 2020 - FEBRERO 2021</small></p>
-                          <p class="text-muted">Atención al público. Diseño de publicidad para las ventas. Administrador de las finanzas del microemprendimiento y del stock del mismo
-                          </p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- END Educación y Experiencia -->
-
-  <!-- Skills -->
-  <div class="card mat-card mx-auto" id="skills">
-      <div id="info">
-          <div class="row align-item-center">
-              <div class="col-md-7">
-                  <div class="title mb-1">
-                      <h3>Hard Skills</h3>
-                      <i class="fa-solid fa-plus"></i>
-                  </div>
-                  <!-- Elemento -->
-                  <div class="skill mb-4">
-                      <div class="d-flex justify-content-between">
-                          <h6 class="font-width-bold">HTML</h6>
-                          <h6 class="font-width-bold"><i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h6>    
-                      </div>
-
-                      <div class="progress">
-                          <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95%</div>
-                      </div>
-                  </div>                
-                  <!-- END Elemento-->
-                  <!-- Elemento -->
-                  <div class="skill mb-4">
-                      <div class="d-flex justify-content-between">
-                          <h6 class="font-width-bold">CSSL</h6>
-                          <h6 class="font-width-bold"><i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h6>    
-                      </div>                
-                      <div class="progress">
-                          <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                      </div>
-                  </div>                
-                  <!-- END Elemento-->
-                  <!-- Elemento -->
-                  <div class="skill mb-4">
-                      <div class="d-flex justify-content-between">
-                          <h6 class="font-width-bold">Bootstrap</h6>
-                          <h6 class="font-width-bold"><i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h6>    
-                      </div>
-
-                      <div class="progress">
-                          <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                      </div>
-                  </div>                
-                  <!-- END Elemento-->
-              </div>
-
-              <div class="col-md-5">
-                  <div class="title mb-1">
-                      <h3>Soft Skills</h3>
-                      <i class="fa-solid fa-plus"></i>
-                  </div>
-                  <!-- SoftSkills-->
-                  <div class="btn-group dropend mb-2 ms-2">
-                      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Trabajo en Equipo
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Editar</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                      </ul>
-                  </div>
-                  <!-- END SoftSkills-->
-                  <!-- SoftSkills-->
-                  <div class="btn-group dropend mb-2 ms-2">
-                      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                          Aprendizaje práctico
-                      </button>
-                      <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Editar</a></li>
-                          <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                      </ul>
-                  </div>
-                  <!-- END SoftSkills-->
-                  <!-- SoftSkills-->
-                  <div class="btn-group dropend mb-2 ms-2">
-                      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Re piola el pibe
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Editar</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                      </ul>
-                  </div>
-                  <!-- END SoftSkills-->
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- END Skills-->
-
-  <!-- Cursos -->
-  <div class="card mat-card mx-auto" id="courses">
-      <div id="info">
-          <div class="title mb-1">
-              <h3>Cursos</h3>
-              <i class="fa-solid fa-plus"></i>
-          </div>
-
-          <div class="row align-item-center">
-              <div class="col">
-                  <div class="border-left border-primary pt-2 pl-4 ml2">
-                      <div class="position-relative ex-me mb-4">
-                          <h5>Introducción a la ciberseguridad: uso de las tecnologías de la información. <i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h5>
-                          <p class=" text-muted mb-1"><strong>Instituto Nacional de la Administración Pública (INAP)  </strong> <small>MAYO 2021</small></p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- END Cursos -->
-
-  <!-- Proyectos -->
-  <div class="card mat-card mx-auto" id="projects">
-      <div id="info">
-          <div class="title mb-1">
-              <h3>Proyectos</h3>
-              <i class="fa-solid fa-plus"></i>
-          </div>
-
-          <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-              <!-- Elemento Proyecto -->
-              <div class="col-sm-6 col-md-6 col-xl-4">
-                  <div class="card">
-                      <img src="assets/img/Proyecto1.png" class="card-img-top" alt="ImagenProyecto">
-                      <div class="card-body">
-                        <h5 class="card-title justify-content-between">Proyecto Portfolio: Argentina Programa <i class="fa-solid fa-pen-to-square"></i><i class="fa-regular fa-square-minus"></i></h5>
-                        <p class="card-text">Proyecto realizado como práctica para la segunda etapa de Argentina Programa, #YoProgramo</p>
-                        <a href="https://k-cr.github.io/portfolio-unidad2-AP/" class="btn btn-primary mb-1 ms-2">Live Demo</a>
-                        <a href="https://github.com/k-cr/portfolio-unidad2-AP" class="btn btn-secondary mb-1 ms-2">Source code</a>
-                      </div>
-                    </div>
-              </div>
-              <!-- END Elemento Proyecto -->
-          </div>
-      </div>
-  </div>
-  <!-- END Proyectos -->
+<app-navbar></app-navbar>
+<app-profile></app-profile>
+<app-aboutme></app-aboutme>
+<app-edu-exp></app-edu-exp>
+<app-skills></app-skills>
+<app-projects></app-projects>
