--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+li {
+    list-style: none;
+}
+
 i {
     padding: 5px;
 }
