añadidos botones de edit

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -5,7 +5,52 @@
         <div class="info-about">
             <div class="img-about mb-3">
                 <img src="https://i.pinimg.com/550x/d8/da/b3/d8dab349862cf5397b90379cc0bcb8b5.jpg" alt="ProfilePicture" id="img-about">
-                <i class="fa-solid fa-pen-to-square"></i>
+                <a href="#" data-bs-toggle="modal" data-bs-target="#editmenu"><i class="fa-solid fa-pen-to-square"></i></a>
+
+                <!-- Menú de edición -->
+                <div class="modal fade" id="editmenu" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="staticBackdropLabel">Modificar perfil</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <form>
+                            <div class="mb-3">
+                              <label for="nameImput" class="form-label">Nombre</label>
+                              <input class="form-control" type="text" placeholder="Escriba su nombre" aria-label="Escriba su nombre">
+                            </div>
+                            <div class="mb-3">
+                                <label for="nameImput" class="form-label">Apellido</label>
+                                <input class="form-control" type="text" placeholder="Escriba su apellido" aria-label="Escriba su apellido">
+                            </div>
+                            <div class="mb-3">
+                                <label for="nameImput" class="form-label">Ocupación</label>
+                                <input class="form-control" type="text" placeholder="Escriba su ocupación" aria-label="Escriba su ocupación">
+                              </div>
+                            <div class="mb-3">
+                                <label for="nameImput" class="form-label">Ubicación</label>
+                                <input class="form-control" type="text" placeholder="Escriba su cuidad, provincia, país" aria-label="Escriba su cuidad, provincia, país">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">Editar foto de banner</label>
+                                <input class="form-control" type="file" id="formFile">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">Editar foto de Perfil</label>
+                                <input class="form-control" type="file" id="formFile">
+                            </div>
+                            <br>
+                            <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary ms-2">Guardar cambios</button>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
             </div>
             
             <div class="mb-3" id="info-data">
