--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -50,39 +50,41 @@
                     <i class="fa-solid fa-plus"></i>
                 </div>
                 <!-- SoftSkills-->
-                <div class="btn-group dropend mb-2 ms-2">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Trabajo en Equipo
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Editar</a></li>
-                      <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                    </ul>
-                </div>
-                <!-- END SoftSkills-->
-                <!-- SoftSkills-->
-                <div class="btn-group dropend mb-2 ms-2">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        Aprendizaje práctico
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Editar</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                    </ul>
-                </div>
-                <!-- END SoftSkills-->
-                <!-- SoftSkills-->
-                <div class="btn-group dropend mb-2 ms-2">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Re piola el pibe
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Editar</a></li>
-                      <li><a class="dropdown-item" href="#">Eliminar</a></li>
-                    </ul>
-                </div>
-                <!-- END SoftSkills-->
+                <li *ngFor="let softskill of mySoftskills">
+                    <div class="btn-group dropend mb-2 ms-2">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{softskill.name}}
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#editsoftskill">Editar</a></li>
+                          <li><a class="dropdown-item" href="#">Eliminar</a></li>
+                        </ul>
+                    </div>
+                </li>
             </div>
+
+            <div class="modal fade" id="editsoftskill" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="staticBackdropLabel">Editar softskill</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="mb-3">
+                            <label for="nameImput" class="form-label">Escriba la softskill</label>
+                            <input class="form-control" type="text" placeholder="Escriba la softskill" aria-label="Escriba la softskill">
+                          </div>
+                        <br>
+                        <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary ms-2">Guardar cambios</button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
